git commit -a -m "Add a new role for netlify-cms git gateway"

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <div>
                 <button type="submit" id="cal" >Calcular</button>
             </div>
+            <div id="copyright">
+                Densenvolvido por: <a href="https://github.com/leonardoasantos1" target="_blank">@leonardoasantos1</a>
+            </div>
         </form>
     </main>
         <script src="./index.js"></script>
